# yuqi

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/yuqi/: data.hpp  nn.hpp  yuqi.hpp
include/yuqi/data/: data.hpp  loaders.hpp
src/: CMakeLists.txt
src/testbed/: CMakeLists.txt  testbed.cpp
src/yuqi/: CMakeLists.txt
src/yuqi/data/: data.cpp  split.cpp
src/yuqi/data/loaders/: mnist.cpp
src/yuqi/nn/: load.cpp
